--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GlaceYT</title>
+    <title>DyNin</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1209515713476165702/1209768849927315456/TICKET_BOT.png?ex=65e8200a&is=65d5ab0a&hm=0c44375289d1f031b0cea5d2a2d4189b44c33c496b7d46cb68bb4f98a23763a9&');
+            background-image: url('https://cdn.discordapp.com/attachments/1094553235022417953/1248949502937796699/e02acbbca19e929041e66d65edf835ca_2.jpg?ex=6665865d&is=666434dd&hm=d8ebcda1780a6b60802a1286de0e528f42c71c1926fc2ae02e4782f2c792ba82&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
